@@ -36,6 +36,7 @@ Glen Gibb
 Graham Rushton
 Guokai Chen
 Gustav Svensk
+G-A. Kamendje
 Harald Heckmann
 Howard Su
 Huang Rui
