@@ -139,7 +139,33 @@ private:
     std::array<AstNode*, 1 << CASE_OVERLAP_WIDTH> m_valueItem;
 
     // METHODS
-
+    bool caseIsEnumComplete(AstCase* nodep, uint32_t numCases) {
+        // Return true if case is across an enum, and every value in the case
+        // statement corresponds to one of the enum values
+        if (!nodep->uniquePragma() && !nodep->unique0Pragma()) return false;
+        AstEnumDType* const enumDtp
+            = VN_CAST(nodep->exprp()->dtypep()->skipRefToEnump(), EnumDType);
+        if (!enumDtp) return false;  // Case isn't enum
+        AstBasicDType* const basicp = enumDtp->subDTypep()->basicp();
+        if (!basicp) return false;  // Not simple type (perhaps IEEE illegal)
+        if (basicp->width() > 32) return false;
+        // Find all case values into a set
+        std::set<uint32_t> caseSet;
+        for (uint32_t i = 0; i < numCases; ++i) {  // All case items
+            if (m_valueItem[i]) caseSet.emplace(i);
+        }
+        // Find all enum values into a set
+        std::set<uint32_t> enumSet;
+        for (AstEnumItem* itemp = enumDtp->itemsp(); itemp;
+             itemp = VN_AS(itemp->nextp(), EnumItem)) {
+            AstConst* const econstp = VN_AS(itemp->valuep(), Const);
+            const uint32_t val = econstp->toUInt();
+            // UINFO(9, "Complete enum item " << val << ": " << itemp << endl);
+            enumSet.emplace(val);
+        }
+        // If sets match, all covered
+        return (caseSet == enumSet);
+    }
     bool isCaseTreeFast(AstCase* nodep) {
         int width = 0;
         bool opaque = false;
@@ -227,15 +253,18 @@ private:
                 }
             }
         }
-        for (uint32_t i = 0; i < numCases; ++i) {
-            if (!m_valueItem[i]) {
-                nodep->v3warn(CASEINCOMPLETE, "Case values incompletely covered "
-                                              "(example pattern 0x"
-                                                  << std::hex << i << ")");
-                m_caseNoOverlapsAllCovered = false;
-                return false;
+        if (!caseIsEnumComplete(nodep, numCases)) {
+            for (uint32_t i = 0; i < numCases; ++i) {
+                if (!m_valueItem[i]) {
+                    nodep->v3warn(CASEINCOMPLETE, "Case values incompletely covered "
+                                                  "(example pattern 0x"
+                                                      << std::hex << i << ")");
+                    m_caseNoOverlapsAllCovered = false;
+                    return false;
+                }
             }
         }
+
         if (m_caseItems <= 3
             // Avoid e.g. priority expanders from going crazy in expansion
             || (m_caseWidth >= 8 && (m_caseItems <= (m_caseWidth + 1)))) {
